# quickhull

./: .gitignore  CMakeLists.txt  README.md  bad_samples.bash  bad_samples_v2.sh  build.sh  qprof.sh  quickhull.pri  quickhull.pro  randombox.pro  ray_plane_intersect.m
include/: quickhull.hpp
src/: quickhull.cpp  randombox.cpp  simple_use.cpp
test/: bad_samples.bash  bad_samples.txt  bad_samples_v2.sh  five_moves.txt  qprof.sh  ray_plane_intersect.m
test/data/: err0_22qh36.txt  err1_26qh28.txt  err2.txt  err3.txt
test/samples/: crush0.txt  float_complanar_facets0.txt  nf5.txt
